# forge

./: .gitignore  CLAUDE.md  DESIGN-DOC.md  README.md  TASK-PLAN.md  forge.yaml  pyproject.toml
adapters/: audit.yaml  coding.yaml  critic.yaml  document.yaml  referee.yaml
docs/: AGENT.md
languages/: python.yaml  rust.yaml  zig.yaml
roles/: critic.yaml  referee.yaml
scripts/: index_codebase.py
src/forge/: run.py
src/forge/adapters/: registry.py
src/forge/agents/: attempt.py  attempt_telemetry.py  base.py  critic.py  integrator.py  plan_follow_up.py  planner.py  referee.py  revisions.py  worker.py
src/forge/core/: config.py  file_filters.py  html_trace_renderer.py  models.py  noise.py  persistence.py  plan_expansion.py  profile_assignment.py  profile_escalation.py  runner.py  runtime.py  scheduler.py  state_service.py  task_complexity.py  telemetry.py  text_trace_renderer.py  trace_repository.py  trace_viewer.py  workspace.py
tests/: __init__.py  test_run.py
tests/adapters/: __init__.py  test_critic_yaml.py  test_registry.py
tests/agents/: __init__.py  test_attempt.py  test_base.py  test_critic.py  test_integrator.py  test_plan_follow_up.py  test_planner.py  test_referee.py  test_revisions.py  test_worker.py
tests/core/: __init__.py  test_config.py  test_file_filters.py  test_html_trace_renderer.py  test_models.py  test_noise.py  test_persistence.py  test_plan_expansion.py  test_profile_assignment.py  test_profile_escalation.py  test_runner.py  test_runtime.py  test_scheduler.py  test_state_service.py  test_task_complexity.py  test_telemetry.py  test_text_trace_renderer.py  test_trace_repository.py  test_trace_viewer.py  test_workspace.py
tests/languages/: __init__.py  test_registry.py
tests/llm/: test_client.py  test_providers.py
tests/parsers/: __init__.py  test_plan.py
tests/tools/: __init__.py  test_blackboard.py  test_builtin.py  test_file_tools.py  test_registry.py  test_run_tools.py  test_schemas.py
(+11 files in other folders)
